--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="plugins/bootstrap-material-design/dist/bootstrap-material-design.css">
+
+
     <!-- Our stles -->
     <link rel="stylesheet" href="css/mainStyle.css" />
 </head>
@@ -26,12 +29,15 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <!-- Handlebars -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
+    <!-- Bootstrap UI -->
+    <script src="./plugins/bootstrap-material-design/dist/bootstrap-material-design.es.js"></script>
 
     <!-- Json data file -->
     <script src="data/data.js"></script>
     <!-- Our scripts -->
     <script src="js/app.js"></script>
     <script src="js/responsiveView.js"></script>
+
 
 </body>
 </html>
