Dodal osnovni view

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="plugins/bootstrap-material-design/dist/bootstrap-material-design.css">
-
+    <link rel="stylesheet" href="plugins/bootstrap-material-design/dist/bootstrap-material-design.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
 
     <!-- Our stles -->
     <link rel="stylesheet" href="css/mainStyle.css" />
@@ -31,6 +32,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
     <!-- Bootstrap UI -->
     <script src="./plugins/bootstrap-material-design/dist/bootstrap-material-design.es.js"></script>
+    <script src="./plugins/bootstrap-material-design/dist/bootstrap-material-design.umd.js"></script>
+    <script src="./plugins/bootstrap-material-design/dist/bootstrap-material-design.iife.min.js"></script>
 
     <!-- Json data file -->
     <script src="data/data.js"></script>
