--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
     <!-- Json data file -->
     <script src="data/data.js"></script>
     <!-- Our scripts -->
+    <script src="js/eventHandler.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/responsiveView.js"></script>
+
 
 
 </body>
