Predlog za interju + dodane slike

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <script src="./plugins/bootstrap-material-design/dist/bootstrap-material-design.es.js"></script>
     <script src="./plugins/bootstrap-material-design/dist/bootstrap-material-design.umd.js"></script>
     <script src="./plugins/bootstrap-material-design/dist/bootstrap-material-design.iife.min.js"></script>
-
+    <script src='./plugins/elevatezoom-master/jquery.elevateZoom-3.0.8.min.js'></script>
     <!-- Json data file -->
     <script src="data/data.js"></script>
     <!-- Our scripts -->
