--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <!-- Json data file -->
     <script src="data/data.js"></script>
     <!-- Our scripts -->
+    <script src="js/basicGalleryEvents.js"></script>
     <script src="js/eventHandler.js"></script>
     <script src="js/app.js"></script>
 
