--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="data/data.js"></script>
     <!-- Our scripts -->
     <script src="js/basicGalleryEvents.js"></script>
+    <script src="js/doubleGalleryEvents.js"></script>
     <script src="js/eventHandler.js"></script>
     <script src="js/app.js"></script>
 
